feat: create html initial template

--- a/index.html
+++ b/index.html
@@ -15,5 +15,56 @@
             <li class="contact-us">Contact Us</li>
         </ul>
     </div>
+    <div class="section-one">
+        <div class="section-one-left">
+        <h1>A focus tool for Muslims</h1>
+        <p>Barakah is more than just a pomodoro timer. We're here to shift your perspective on focus. Designed for the young Muslim.</p>
+        <div class="sign-up">Sign up</div>
+        </div>
+        <div class="section-one-right">
+            <img src="./images/assets_task_01k22fn3wkf3dbfq15cygpspcm_1754577797_img_0.webp" alt="an image of a sunset">
+        </div>
+    </div>
+    <div class="section-two">
+        <h1>Start your journey with Barakah.</h1>
+        <div class="illustrations">
+            <div class="illustration-one">
+                <ul>
+                    <li>
+                        <img src="./images/20250805_1655_Simplistic Space Aesthetic_remix_01k1xf0c76ehjtbzr161rpm9jk.png">
+                        <p>This is a brief description of the image above.</p>
+                    </li>
+                     <li>
+                        <img src="./images/20250805_1655_Simplistic Space Aesthetic_remix_01k1xf0c76ehjtbzr161rpm9jk.png">
+                        <p>This is a brief description of the image above.</p>
+                    </li>
+                     <li>
+                        <img src="./images/20250805_1655_Simplistic Space Aesthetic_remix_01k1xf0c76ehjtbzr161rpm9jk.png">
+                        <p>This is a brief description of the image above.</p>
+                    </li>
+                     <li>
+                        <img src="./images/20250805_1655_Simplistic Space Aesthetic_remix_01k1xf0c76ehjtbzr161rpm9jk.png">
+                        <p>This is a brief description of the image above.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="section-three">
+            <p class="hadith">“Take up good deeds only as much as you are able, for the best deeds are those done regularly even if they are few.”</p>
+            <p class="prophet">- Prophet Muhammad ﷺ</p>
+        </div>
+    </div>
+    <div class="section-four">
+        <div class="call-to-action">
+            <div class="cta">Focus with Barakah</div>
+            <div class="cta-description">Sign up and take a step on your journey to Allah</div>
+        </div>
+        <div class="cta-sign-up">
+            Sign up
+        </div>
+    </div>
+    <div class="footer">
+        <p>Copyright © Barakah</p>
+    </div>
 </body>
 </html>
