style: style header

--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Barakah</title>
 </head>
 <body>
-    <div class="header">
-        <div class="title">Barakah</div>
-        <ul class="header-right">
-            <li class="home">Home</li>
-            <li class="about">About</li>
-            <li class="contact-us">Contact Us</li>
-        </ul>
-    </div>
     <div class="section-one">
+        <div class="header">
+            <div class="title">Barakah</div>
+            <ul class="header-right">
+                <li class="home"><a href="#">Home</a></li>
+                <li class="about"><a href="#">About</a></li>
+                <li class="contact-us"><a href="#">Contact Us</a></li>
+            </ul>   
+        </div>
         <div class="section-one-left">
-        <h1>A focus tool for Muslims</h1>
-        <p>Barakah is more than just a pomodoro timer. We're here to shift your perspective on focus. Designed for the young Muslim.</p>
-        <div class="sign-up">Sign up</div>
+            <h1>A focus tool for Muslims</h1>
+            <p>Barakah is more than just a pomodoro timer. We're here to shift your perspective on focus. Designed for the young Muslim.</p>
+            <div class="sign-up">Sign up</div>
         </div>
         <div class="section-one-right">
             <img src="./images/assets_task_01k22fn3wkf3dbfq15cygpspcm_1754577797_img_0.webp" alt="an image of a sunset">
@@ -31,19 +34,19 @@
             <div class="illustration-one">
                 <ul>
                     <li>
-                        <img src="./images/20250805_1655_Simplistic Space Aesthetic_remix_01k1xf0c76ehjtbzr161rpm9jk.png">
+                        <img src="#">
                         <p>This is a brief description of the image above.</p>
                     </li>
                      <li>
-                        <img src="./images/20250805_1655_Simplistic Space Aesthetic_remix_01k1xf0c76ehjtbzr161rpm9jk.png">
+                        <img src="#">
                         <p>This is a brief description of the image above.</p>
                     </li>
                      <li>
-                        <img src="./images/20250805_1655_Simplistic Space Aesthetic_remix_01k1xf0c76ehjtbzr161rpm9jk.png">
+                        <img src="#">
                         <p>This is a brief description of the image above.</p>
                     </li>
                      <li>
-                        <img src="./images/20250805_1655_Simplistic Space Aesthetic_remix_01k1xf0c76ehjtbzr161rpm9jk.png">
+                        <img src="#">
                         <p>This is a brief description of the image above.</p>
                     </li>
                 </ul>
