style: style hero

--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
                 <li class="contact-us"><a href="#">Contact Us</a></li>
             </ul>   
         </div>
-        <div class="section-one-left">
-            <h1>A focus tool for Muslims</h1>
-            <p>Barakah is more than just a pomodoro timer. We're here to shift your perspective on focus. Designed for the young Muslim.</p>
-            <div class="sign-up">Sign up</div>
-        </div>
-        <div class="section-one-right">
-            <img src="./images/assets_task_01k22fn3wkf3dbfq15cygpspcm_1754577797_img_0.webp" alt="an image of a sunset">
+        <div class="hero">
+            <div class="hero-left">
+                <h1>A focus tool perfect for the modern Muslim</h1>
+                <p>Barakah is more than a pomodoro timer. We're here to redesign the concept of focus. Designed for the young Muslim.</p>
+                <a href="#" class="sign-up-container">
+                        <div class="sign-up">Sign up</div>
+                </a>
+            </div>
+            <div class="hero-right">
+                <img src="./images/assets_task_01k22fn3wkf3dbfq15cygpspcm_1754577797_img_0.webp" alt="an image of a sunset">
+            </div>
         </div>
     </div>
     <div class="section-two">
