--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
         <div class="hero">
             <div class="hero-left">
-                <h1>A focus tool perfect for the modern Muslim</h1>
-                <p>Barakah is more than a pomodoro timer. We're here to redesign the concept of focus. Designed for the young Muslim.</p>
-                <a href="#" class="sign-up-container">
-                        <div class="sign-up">Sign up</div>
-                </a>
+                <h1>A focus tool designed for the modern Muslim</h1>
+                <p>Barakah is more than a pomodoro timer. We're here to redesign your concept of focus. Crafted with sincerity.</p>
+                <div class="sign-up-container">
+                    <div class="sign-up"><a href="#">Sign Up</a></div>
+                </div>
             </div>
             <div class="hero-right">
                 <img src="./images/assets_task_01k22fn3wkf3dbfq15cygpspcm_1754577797_img_0.webp" alt="an image of a sunset">
