feat: refine and style section two

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Barakah is more than a pomodoro timer. We're here to redesign your concept of focus. Crafted with sincerity.</p>
                 <div class="sign-up-container">
                     <div class="sign-up"><a href="#">Sign Up</a></div>
-                </div>  
+                </div>
             </div>
             <div class="hero-right">
                 <img src="./images/assets_task_01k22fn3wkf3dbfq15cygpspcm_1754577797_img_0.webp" alt="an image of a sunset">
@@ -33,33 +33,33 @@
         </div>
     </div>
     <div class="section-two">
-        <h1>Start your journey with Barakah.</h1>
+        <h1>Start your journey with Barakah</h1>
         <div class="illustrations">
             <div class="illustration-one">
                 <ul>
                     <li>
-                        <img src="#">
-                        <p>This is a brief description of the image above.</p>
+                        <img src="./images/20250808_1826_Dreamy Mountain Path_remix_01k25bdgamersr32vg2shnk45r.png">
+                        <p>The first step is direction. Vision gives your focus purpose and your effort meaning.</p>
                     </li>
                      <li>
-                        <img src="#">
-                        <p>This is a brief description of the image above.</p>
+                        <img src="./images/20250808_1833_Heart Lantern Road_remix_01k25btaarfn1bnvpmxf8d7t04.png">
+                        <p>Intention transforms action. Niyyah roots your work in sincerity and legacy.</p>
                     </li>
                      <li>
-                        <img src="#">
-                        <p>This is a brief description of the image above.</p>
+                        <img src="./images/20250808_1838_Spotlight Tunnel Vision_remix_01k25c31t9ep19pmeyeqyvbh17.png">
+                        <p>Cut the noise. Focus is disciplined presence — doing what matters, deeply.</p>
                     </li>
                      <li>
-                        <img src="#">
-                        <p>This is a brief description of the image above.</p>
+                        <img src="./images/20250808_1840_Reflective Lakeside Serenity_remix_01k25c7sfdf6w8cr7jwrbwqk44.png">
+                        <p>Don’t just repeat — refine. Reflection keeps you aligned, intentional, and growing.</p>
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="section-three">
-            <p class="hadith">“Take up good deeds only as much as you are able, for the best deeds are those done regularly even if they are few.”</p>
-            <p class="prophet">- Prophet Muhammad ﷺ</p>
-        </div>
+    </div>
+    <div class="section-three">
+        <p class="hadith">“Take up good deeds only as much as you are able, for the best deeds are those done regularly even if they are few.”</p>
+        <p class="prophet">- Prophet Muhammad ﷺ</p>
     </div>
     <div class="section-four">
         <div class="call-to-action">
