--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Barakah</title>
 </head>
@@ -22,7 +26,7 @@
         <div class="hero">
             <div class="hero-left">
                 <h1>A focus tool designed for the modern Muslim</h1>
-                <p>Barakah is more than a pomodoro timer. We're here to redesign your concept of focus. Crafted with sincerity.</p>
+                <p>Barakah is more than a pomodoro timer. We're here to realign your concept of focus. Crafted with sincerity.</p>
                 <div class="sign-up-container">
                     <div class="sign-up"><a href="#">Sign Up</a></div>
                 </div>
@@ -58,8 +62,15 @@
         </div>
     </div>
     <div class="section-three">
-        <p class="hadith">“Take up good deeds only as much as you are able, for the best deeds are those done regularly even if they are few.”</p>
-        <p class="prophet">- Prophet Muhammad ﷺ</p>
+        <h2 class="headline">
+        So you can work with purpose, presence, and sincerity.
+        </h2>
+        <p class="arabic-hadith">
+        قَالَ رَسُولُ اللهِ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ: إِنَّمَا الأَعْمَالُ بِالنِّيَّاتِ
+        </p>
+        <p class="english-translation">
+        “Actions are but by intentions.”<br>
+        <p class="attribution">- Prophet Muhammad ﷺ</p>    
     </div>
     <div class="section-four">
         <div class="call-to-action">
