style: style section four

--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
     </div>
     <div class="section-four">
         <div class="call-to-action">
-            <div class="cta">Focus with Barakah</div>
-            <div class="cta-description">Sign up and take a step on your journey to Allah</div>
-        </div>
-        <div class="cta-sign-up">
-            Sign up
+            <div class="left-cta">
+                <div class="cta">Focus with Barakah</div>
+                <div class="cta-description">Sign up and take a step on your journey to Allah</div>
+            </div>
+           <div class="sign-up-container">
+                    <div class="sign-up"><a href="#">Sign Up</a></div>
+            </div>
         </div>
     </div>
     <div class="footer">
